--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "moment": "^2.17.1",
     "ng-cordova": "^0.1.27-alpha",
     "ngstorage": "^0.3.11",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "bower": "^1.3.3",
