--- a/config/base/app.json
+++ b/config/base/app.json
@@ -18,5 +18,12 @@
         "IN_PROGRESS": "IN_PROGRESS",
         "CANCELED": "CANCELED",
         "COMPLETED": "COMPLETED"
+    },
+    "demoLocation": {
+        "hardcoded": false,
+        "random": true,
+        "lat": 44.821678,
+        "lng": 20.414402,
+        "radius": 2000
     }
 }
