--- a/package.json
+++ b/package.json
@@ -45,6 +45,11 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "eslint": "^3.18.0",
+    "babel-eslint": "^7.2.0",
+    "eslint-config-defaults": "^9.0.0",
+    "eslint-plugin-angular": "^1.6.2",
+    "eslint-plugin-babel": "^4.1.1",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
