PB-145 Refactoring, in progress

--- a/config/base/app.json
+++ b/config/base/app.json
@@ -25,5 +25,8 @@
         "lat": 44.821678,
         "lng": 20.414402,
         "radius": 2000
+    },
+    "iot": {
+        "HOST": "https://api.allthingstalk.io:15671/stomp"
     }
 }
