--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,39 +1,40 @@
 {
     "extends": [
         "eslint:recommended",
-        "defaults/configurations/airbnb/es5" 
+        "defaults/configurations/airbnb/es5"
     ],
     "plugins": [
         "angular"
     ],
     "rules": {
-        "no-underscore-dangle": ["error"],
-        "no-labels": ["error"],
-        "indent": ["error", 4],
-        "spaced-comment" : ["error", "never"],
-        "func-names": ["error", "never"],
-        "no-param-reassign": ["error", { "props": false }],
-        "no-use-before-define": ["error", { "functions": false }],
-        "comma-dangle": ["error", "never"],
-        "semi": ["error", "always"],
-        "no-unsafe-negation": ["error"],
-        "curly": ["error", "all"],
-        "default-case": ["error"],
-        "dot-notation": ["error"],
-        "no-console": ["error", { "allow": ["log"] }],
-        "eqeqeq": ["error", "always"],
-        "guard-for-in": ["error"],
-        "no-alert": ["error"],
-        "no-caller": ["error"],
-        "no-else-return": ["error"],
-        "no-empty-function": ["error"],
-        "strict": ["error", "function"],
-        "wrap-iife": ["error", "any"],
-        "max-len": ["error", 130],
-        "vars-on-top": [0],
-        "block-scoped-var": [0],
-        "no-empty-label": "off",
-        "space-after-keywords": "off",
-        "space-return-throw-case": "off"
-  }
+        "eqeqeq": "off",
+        "no-underscore-dangle": "error",
+        "camelcase": "error",
+        "no-labels": 0,
+        "indent": [0, 4],
+        "spaced-comment": [0, "never"],
+        "func-names": 0,
+        "no-param-reassign": 0,
+        "no-use-before-define": 0,
+        "comma-dangle": [0, "never"],
+        "semi": [0, "always"],
+        "no-unsafe-negation": 0,
+        "curly": [0, "all"],
+        "default-case": 0,
+        "dot-notation": 0,
+        "no-console": 0,
+        "guard-for-in": 0,
+        "no-alert": 0,
+        "no-caller": 0,
+        "no-else-return": 0,
+        "no-empty-function": 0,
+        "strict": [0, "function"],
+        "wrap-iife": [0, "any"],
+        "max-len": [0, 130],
+        "vars-on-top": 0,
+        "block-scoped-var": 0,
+        "no-empty-label": 0,
+        "space-after-keywords": 0,
+        "space-return-throw-case": 0
+    }
 }
