Made job polling configurable, enable/disable and interval. CUrrently disabled because of the Mlab error

--- a/config/base/app.json
+++ b/config/base/app.json
@@ -28,5 +28,9 @@
     },
     "iot": {
         "HOST": "https://api.allthingstalk.io:15671/stomp"
+    },
+    "jobPolling": {
+        "enabled": false,
+        "interval": 15000
     }
 }
